--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -7,10 +7,6 @@
     <title>product-landing-page</title>
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:ital@1&display=swap" rel="stylesheet">
   </head>
   <body>
     <main>
@@ -20,9 +16,9 @@
       </div>
         <nav id="nav-bar">
             <ul>
-                <li class="nav-link"><a href="#features">Features</a></li>
-                <li class="nav-link"><a href="#how-it-works">How it works</a></li>
-                <li class="nav-link"><a href="#pricing">Pricing</a></li>
+                <li><a class="nav-link" href="#features">Features</a></li>
+                <li><a class="nav-link" href="#how-it-works">How it works</a></li>
+                <li><a class="nav-link" href="#pricing">Pricing</a></li>
             </ul>
         </nav>
     </header>
@@ -42,12 +38,16 @@
                 <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity 
                     of your purchase.</p>
             </div>
+        </div>
+        <div class="grid">
             <div class="icon"><i class="fa fa-3x fa-truck"></i></div>
             <div class="desc">
                 <h2>Fast Shipping</h2>
                 <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free 
                     returns if you are not satisfied.</p>
             </div>
+        </div>
+        <div class="grid">   
             <div class="icon"><i class="fa fa-3x fa-battery-full" aria-hidden="true"></i></div>
             <div class="desc">
                 <h2>Quality Assurance</h2>
@@ -58,7 +58,7 @@
       </section>
       <section id="how-it-works">
         <iframe id="video" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;
-        controls=0&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe>
+        controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
       </section>
       <section id="pricing">
         <div class="product" id="tenor">
