--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -76,10 +76,10 @@
             <div class="level">Bass Trombone</div>
             <h2>$900</h2>
                 <ol>
-                    <li>Lorem ipsum</li>
-                    <li>Lorem ipsum</li>
                     <li>Lorem ipsum dolor</li>
-                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum dolor</li>
+                    <li>Lorem ipsum dolor dolor</li>
+                    <li>Lorem ipsum dolor</li>
                 </ol>
                 <button class="btn">Select</button>
         </div>
